--- a/package.json
+++ b/package.json
@@ -42,7 +42,8 @@
     "grunt-contrib-jshint": "^0.10.0",
     "grunt-contrib-nodeunit": "^0.4.1",
     "grunt-contrib-uglify": "^0.5.1",
-    "grunt-gjslint": "^0.2.1"
+    "grunt-gjslint": "^0.2.1",
+    "grunt-json-minify": "^0.4.0"
   },
   "files": [
     "index.js",
