--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "grunt-contrib-jshint": "^0.10.0",
     "grunt-contrib-nodeunit": "^0.4.1",
     "grunt-contrib-uglify": "^0.5.1",
+    "grunt-contrib-watch": "^1.0.0",
     "grunt-gjslint": "^0.2.1",
     "grunt-json-minify": "^0.4.0"
   },
